kubernetes/projects/home-automation/apps/home-assistant-mobile-webhook/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: home-assistant-mobile-webhook
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: home-assistant-mobile-webhook
    app.kubernetes.io/part-of: home-automation
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: home-assistant-mobile-webhook
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cloudflare
          podSelector:
            matchLabels:
              app: controlled-cloudflared-connector
              strrl.dev/cloudflare-tunnel-ingress-controller: controlled-cloudflared-connector
      ports:
        - { protocol: TCP, port: 8080 }
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - { protocol: UDP, port: 53 }
        - { protocol: TCP, port: 53 }
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: home-assistant
              app.kubernetes.io/name: home-assistant
      ports:
        - { protocol: TCP, port: 8123 }
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: controlled-cloudflared-connector-home-assistant-mobile-webhook-egress
  namespace: cloudflare
  labels:
    app.kubernetes.io/name: home-assistant-mobile-webhook
    app.kubernetes.io/part-of: home-automation
spec:
  podSelector:
    matchLabels:
      app: controlled-cloudflared-connector
      strrl.dev/cloudflare-tunnel-ingress-controller: controlled-cloudflared-connector
  policyTypes: [Egress]
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: home-assistant
          podSelector:
            matchLabels:
              app.kubernetes.io/name: home-assistant-mobile-webhook
      ports:
        - { protocol: TCP, port: 8080 }
